first version of converting docu to latex docu, to get a feel

--- a/latex_docu/documention.tex
+++ b/latex_docu/documention.tex
@@ -9,6 +9,7 @@
 
 \documentclass{llncs}
 \usepackage{listings}
+\usepackage{amsmath}
 \begin{document}
 
 \title{Projectdocumentation for Open Environemental Data Cloud Prototyping Project}
