--- a/latex_docu/08/doc.tex
+++ b/latex_docu/08/doc.tex
@@ -1,7 +1,8 @@
 \section{Data Source Metadata Management
 System}\label{data-source-metadata-management-system}
 
-\textbf{Written by Paul Wille} \emph{Proofread \& edited by Andres}
+\textbf{Authoriship} Written by Paul Wille \emph{Proofread \& edited by
+Andres}
 
 We decided to have a separate component to manage the metadata about
 data sources which are imported to the system. This component shall
