--- a/latex_docu/documention.tex
+++ b/latex_docu/documention.tex
@@ -10,6 +10,13 @@
 \documentclass{llncs}
 \usepackage{listings}
 \usepackage{amsmath}
+\usepackage{longtable}
+\usepackage{booktabs}
+\usepackage{graphicx}
+
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \begin{document}
 
 \title{Projectdocumentation for Open Environemental Data Cloud Prototyping Project}
@@ -29,12 +36,25 @@
 \keywords{Open Data, Environemental Data, Big Data}
 \end{abstract}
 %
-\input{01_introduction/doc.tex}
-\input{07_database/doc.tex}
+\input{01/doc.tex}
+\input{02/doc.tex}
+\input{03/doc.tex}
+%\input{04/doc.tex}
+\input{05/doc.tex}
+\input{06/doc.tex}
+\input{07/doc.tex}
+\input{08/doc.tex}
+%\input{09/doc.tex}
+%\input{10/doc.tex}
+%\input{11/doc.tex}
+\input{12/doc.tex}
 
 \begin{thebibliography}{}  % (do not forget {}) and Put your bib.txt in here
-\input{01_introduction/bib.tex}
-\input{07_database/bib.tex}
+
+%\input{01_introduction/bib.tex}
+%\input{07_database/bib.tex}
+
+
 \end{thebibliography}
 
 \end{document}
