Compiled Latex doc

--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -168,9 +168,10 @@ stuff in the req's (like units \& measurements if those concepts haven't
 been introduced. Move the decomposition \& req's further down \& pull up
 the open-data \& other introductory text about our domain here)
 
-\subsubsection{Decomposition}\label{decomposition}
+\subsubsection{Building Blocks}\label{building-blocks}
 
-The problem domain can be decomposed into the following components:
+The problem domain can be decomposed into the following architectural
+building blocks:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
