--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -41,6 +41,7 @@
 \input{03/doc.tex}
 %\input{04/doc.tex}
 \input{05/doc.tex}
+\input{05a/doc.tex}
 \input{06/doc.tex}
 \input{07/doc.tex}
 \input{08/doc.tex}
