Updating LaTeX files

--- a/latex_docu/02/doc.tex
+++ b/latex_docu/02/doc.tex
@@ -1,4 +1,4 @@
-\section{Competitor Analysis}\label{competitor-analysis}
+\section{Survey of Current Landscape}\label{survey-of-current-landscape}
 
 \textbf{Authorship}
 
@@ -8,7 +8,8 @@ Version & Date & Modified by & Summary of changes\tabularnewline
 \midrule
 \endhead
 0.1 & 2017-06-03 & Andres Ardila & Working draft\tabularnewline
-0.2 & 2017-07-07 & Andres Ardila & Added secion on Talend\tabularnewline
+0.2 & 2017-07-07 & Andres Ardila & Added section on
+Talend\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -102,21 +103,29 @@ https://www.pubnub.com/
 \paragraph{Scalability}\label{scalability}
 
 15 globally replicated points of presence transacting over 1.5 trillion
-messages for 300 million unique devices per month. \#\#\#\# Storage 15
-globally replicated points of presence transacting over 1.5 trillion
-messages for 300 million unique devices per month. \#\#\# Segments
-\#\#\# Customers \#\#\# Analysis
+messages for 300 million unique devices per month.
 
-\subsection{Talend}\label{talend}
+\paragraph{Storage}\label{storage}
 
-https://www.talend.com/resource/sensor-data/
-
-Talend
-
-\subsubsection{Features}\label{features-2}
+15 globally replicated points of presence transacting over 1.5 trillion
+messages for 300 million unique devices per month.
 
 \subsubsection{Segments}\label{segments-1}
 
 \subsubsection{Customers}\label{customers-1}
 
 \subsubsection{Analysis}\label{analysis-1}
+
+\subsection{Talend}\label{talend}
+
+https://www.talend.com/resource/sensor-data/
+
+Talend is //TODO
+
+\subsubsection{Features}\label{features-2}
+
+\subsubsection{Segments}\label{segments-2}
+
+\subsubsection{Customers}\label{customers-2}
+
+\subsubsection{Analysis}\label{analysis-2}
