--- a/latex_docu/05/doc.tex
+++ b/latex_docu/05/doc.tex
@@ -251,7 +251,7 @@ Architecture}\label{framework-structure-architecture}
 \textbf{Figure 1.} shows an abstract overview of a simple importer
 application. We will look at each component individually.
 
-\begin{figure}
+\begin{figure}[htbp]
 \centering
 \includegraphics{images/components_diagram.png}
 \caption{image-title-here}
