--- a/latex_docu/06/doc.tex
+++ b/latex_docu/06/doc.tex
@@ -159,7 +159,7 @@ routines. With this we could achieve a procedure that works like this:
   background.
 \end{itemize}
 
-\subsubsection{Allow parallelism, scaling and
+\subsubsection{Allow parallelism, scaling, and
 configuration}\label{allow-parallelism-scaling-and-configuration}
 
 Scaling and configuring the consumer would have been possible in any
@@ -207,5 +207,3 @@ interval can be processed by one importer but there are several of them
 run in parallel we can create a topic per importing instance and run a
 consumer for each. So the consumer in its current state is capable for
 both options.
-
-\subsection{Benchmarks}\label{benchmarks}
