--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -157,7 +157,7 @@ configuration made for each index. To illustrate that see the following
 figure, which assumes that the cluster holds three indices, on three
 nodes, with two replicas per index.
 
-\begin{figure}
+\begin{figure}[htbp]
 \centering
 \includegraphics{images/07_database_architecture_elastic.png}
 \caption{OpenData Database Architecture}
@@ -274,7 +274,7 @@ become a problem later on. To allow thousands of request per second, we
 decided to start with three replicas, so each request is forwarded to a
 different replica. This can be flexible in- or decreased later on.
 
-\begin{figure}
+\begin{figure}[htbp]
 \centering
 \includegraphics{images/07_database_architecture.png}
 \caption{OpenData Database Architecture}
@@ -418,7 +418,7 @@ runtime based on Chrome's V8 JavaScript engine. It allows a fast
 iteration pace and needs just minimal preparation to develop server
 instances with.
 
-\begin{figure}
+\begin{figure}[htbp]
 \centering
 \includegraphics{images/07_API_Architecture.png}
 \caption{image-title-here}
