Reverting overwritten changes to main documentation.tex template

--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -19,15 +19,15 @@
 
 \begin{document}
 
-\title{Projectdocumentation for Open Environemental Data Cloud Prototyping Project}
+\title{Project Documentation for Open Environmental Data Cloud Prototyping Project}
 %
-\titlerunning{Test}  % abbreviated title (for running head)
+\titlerunning{Open Data}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Nico Tasche, ....}
+\author{Andres Ardila, Rohullah Ayobi, Oliver Bruski, Ahmad Jawid Jami, Amer Jazaerli, Nico Tasche, Paul Wille}
 
-\institute{Technische Universitaet Berlin, Straße des 17. Juni 135, 10623 Berlin, Germany,\\
+\institute{Technische Universit\"at Berlin, Stra\ss{}e des 17. Juni 135, 10623 Berlin, Germany,\\
 \email{nico.tasche@campus.tu-berlin.de}}
 
 \maketitle              % typeset the title of the contribution
@@ -35,7 +35,16 @@
 \begin{abstract}
 \keywords{Open Data, Environemental Data, Big Data}
 \end{abstract}
-%
+
+\pagebreak
+
+\tableofcontents
+
+\clearpage
+%%%%%%%%%%%%%%%%%%%%%%%
+%% Content %%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%
+
 \input{01/doc.tex}
 \input{02/doc.tex}
 \input{03/doc.tex}
